fix: use custom properties from zeit.web for z-index (#41)
* fix: tweak styles to center notification div

* refactor: use z-index from custom properties as we do in zeit.web

--- a/demo/style.css
+++ b/demo/style.css
@@ -1,5 +1,9 @@
 @import './theme-switcher.css';
 
+:root {
+	--z-index-notification: 800;
+}
+
 html,
 body {
 	margin: 0;
